# todo-log

./: .gitignore  Cargo.toml  claude.md  config.yml
src/: main.rs  models.rs  storage.rs
src/ui/: app.rs  log_entry.rs  log_list.rs  menu.rs  mod.rs  people_list.rs  person_details.rs  person_edit.rs  project_details.rs  project_edit.rs  project_list.rs  todo_list.rs
